
EXTRA_DIST = \
	superlu-4.0-autotools.patch \
	superlu-4.0mk05.patch \
	\
	index.html \
	installation.html \
	tutorial.html \
	screen.css \
	\
	coords.png \
	curvedht.png \
	fiberleak.png \
	freecode_logo.png \
	leakht01.png \
	leakht02.png \
	plotht01.png \
	plotht02.png \
	plotmgp.png \
	strubeht.png
