
EXTRA_DIST = \
	wgms3d_calc_group_index.m \
	wgms3d_clean.m \
	wgms3d_find_pml.m \
	wgms3d_grid_make.m \
	wgms3d_grid_write.m \
	wgms3d_import_output.m \
	wgms3d_int.m \
	wgms3d_load_field.m \
	wgms3d_load_mode_field.m \
	wgms3d_mgp_rib_waveguide.m \
	wgms3d_modeproduct.m \
	wgms3d_normalize_mode_field.m \
	wgms3d_plot_cd_boundary.m \
	wgms3d_plot_contours.m \
	wgms3d_plot_el.m \
	wgms3d_plot_et.m \
	wgms3d_plot_get_data.m \
	wgms3d_plot_hl.m \
	wgms3d_plot_ht.m \
	wgms3d_plot_mgp.m \
	wgms3d_plot_parse_args.m \
	wgms3d_plot_post.m \
	wgms3d_plot_quiver.m \
	wgms3d_plot_refractive_index.m \
	wgms3d_plot_scalar.m \
	wgms3d_read_bin_data.m \
	wgms3d_run.m \
	wgms3d_tracemodes.m \
	wgms3d_tracemodes_plotneffs.m \
	wgms3d_tracemodes_update_parameter.m
